# python-project-structure

./: Makefile  pyproject.toml
ageverifier/: ageverifier.py
project/cli/: main.py
project/resources/: ageverifier.py
tests/: test_ageverifier.py
